@@ -6,6 +6,9 @@ Current Level Cap: 25
 - - - - - - - - - - - - -
 INTRO TEXT
 
+Additions:
+ - Discord rich presence displays turn count in battle.
+
 Changes:
  - Leaderboards pull on the title screen and push after saving.
  - Fire takes 25% damage from Ice instead of 0%.
